# metrics-dashboard

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_full  Makefile  NOTICE.txt  README.md  aliases.json  create_dashboard.py  create_identities.py  credentials.cfg.sample  dashboard.cfg  enrich_identities.py  entrypoint.sh  get_projects.py  infra.cfg  manage-dashboards.py  og_projects.json  orgs.json  project.cfg  projects-devstack.json  projects.json  query.py  requirements.txt  set_config.py
dashboards/: About-dashboard.json  Affiliations-dashboard.json  Community-Structure-by-Organization-dashboard.json  Community-Structure-by-Project-dashboard.json  Data-Status-dashboard.json  Demographics-dashboard.json  Git-Areas-of-Code-dashboard.json  Git-Demographics-dashboard.json  Git-dashboard.json  GitHub-Issues-Backlog-dashboard.json  GitHub-Issues-Efficiency-dashboard.json  GitHub-Issues-Timing-dashboard.json  GitHub-Issues-dashboard.json  GitHub-Pull-Requests-Backlog-dashboard.json  GitHub-Pull-Requests-Efficiency-dashboard.json  GitHub-Pull-Requests-Timing-dashboard.json  GitHub-Pull-Requests-dashboard.json  GitHub-Repositories-dashboard.json  Lifecycle-dashboard.json  Overall-Community-Structure-dashboard.json  Overview-dashboard.json  Slack-dashboard.json
enrich-extra/: ownership.json
experimental/: Makefile  credentials-example.cfg  docker-compose.yml  dot_env  requirements.txt  setup.cfg
experimental/conf/: credentials.cfg.template  setup.cfg  sg_internal_users.yml.template  simple-projects.json
experimental/scripts/: hash_password.py
nginx/: Dockerfile  nginx.conf
scripts/: export-identities.sql
