[general]
short_name = Grimoire
update = true
debug = false 
logs_dir = /tmp
aliases_file = conf/aliases.json

[projects]
projects_file = conf/simple-projects.json

[es_collection]
# Loaded from credentials.cfg
# url = https://es_user:es_password@elasticsearch:9200

[es_enrichment]
# Loaded from credentials.cfg
# url = https://es_user:es_password@elasticsearch:9200

[sortinghat]
# Loaded from credentials.cfg
# host = 
# user = 
# password = 
# database = 
load_orgs = true
orgs_file = conf/orgs.json
identities_file = [conf/identities.json]
matching = [email-name, github]
autoprofile = [customer, git, github]
sleep_for = 86400
unaffiliated_group = Unknown
affiliate = True

[panels]
kibiter_url = http://kibiter:5601
kibiter_time_from = now-1y
kibiter_default_index = "git"
github-repos = true

[phases]
collection = true
identities = true
enrichment = true
panels = true	

##
## The protocol for defining indexes will be
## [description_of_source_with_underscores]-[raw|enriched]
## For example:
## git-raw or git-enriched
## gitub_prs-raw or github_prs-enriched
##
[git]
raw_index = git-raw
enriched_index = git-enriched
studies = [enrich_demography:git,enrich_git_branches:git,enrich_areas_of_code:git, enrich_onion:git,enrich_forecast_activity]

[enrich_demography:git]

[enrich_areas_of_code:git]
in_index = git-raw
out_index = git_aoc-enriched

[enrich_git_branches:git]
run_month_days = [4, 23]

[enrich_onion:git]
in_index = git-raw
out_index = git_onion-enriched
contribs_field = hash

[enrich_forecast_activity]
out_index = git_study_forecast

# All things github
[github]
# Loaded from credentials.cfg
# api-token = 
raw_index = github_raw
enriched_index = github_enriched
sleep-for-rate = true
no-archive = true
sleep-time = 300
studies = [enrich_onion:github,enrich_geolocation:user,enrich_geolocation:assignee,enrich_backlog_analysis]

[github:repo]
# Loaded from credentials.cfg
# api-token = 
raw_index = github-repo_raw
enriched_index = github-repo_enriched
category = repository
sleep-for-rate = true
no-archive = true
sleep-time = 300
studies = [enrich_extra_data:github]

[github:pull]
# Loaded from credentials.cfg
# api-token = 
raw_index = github-pull_raw
enriched_index = github-pull_enriched
category = pull_request
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github,enrich_geolocation:user,enrich_geolocation:assignee,enrich_backlog_analysis,enrich_extra_data:github]

[github2:issue]
# Loaded from credentials.cfg
# api-token = 
raw_index = github2-issue_raw
enriched_index = github2-issue_enriched
sleep-for-rate = true
no-archive = true
category = issue

[github2:pull]
# Loaded from credentials.cfg
# api-token = 
raw_index = github2-pull_raw
enriched_index = gihub2-pull_enriched
sleep-for-rate = true
no-archive = true
category = pull_request

[discourse]
# Loaded from credentials.cfg
# api-username = 
# api-token = 
raw_index = discourse-raw
enriched_index = discourse-enriched

[slack]
# Loaded from credentials.cfg
# api-token = 
raw_index = slack-raw
enriched_index = slack-enriched
no-archive = true

# Studies
# Sample working study to apply labels bases on edX's squad/repo ownership model
[enrich_extra_data:github]
json_url = https://gist.githubusercontent.com/e0d/88669434afa55953b0d99ed04402ee46/raw/2227e48b947c4e822c4888fda8260846e6034d15/json

[enrich_onion:github]
in_index_iss = github_issues_onion-src
in_index_prs = github_prs_onion-src
out_index_iss = github-issues-onion_enriched
out_index_prs = github-prs-onion_enriched

[enrich_geolocation:user]
location_field = user_location
geolocation_field = user_geolocation

[enrich_geolocation:assignee]
location_field = assignee_location
geolocation_field = assignee_geolocation

[enrich_backlog_analysis]
out_index = github_enrich_backlog
interval_days = 7
reduced_labels = [bug,enhancement]
map_label = [others, bugs, enhancements]
