# Mordred configuration file (Setup)
#
# Non-sensitive parameters are stored here.
# (Sensitive parameters are stored in credentails.cfg)
#
# List: [val1, val2 ...]
# Int: int_value
# Int as string: "Int"
# List as string: "[val1, val2 ...]"
# String: string_value
# None: None, none
# Boolean: true, True, False, false
[general]
short_name = Open edX Leaderboard
# Update incrementally, forever
update = true
# Don't start a new update earlier than (since last update, seconds)
min_update_delay = 86400
# Produce debugging data for the logs
debug = false 

# Directory for logs
logs_dir = conf/logs
# File with aliases definitions
aliases_file = conf/aliases.json

## File with menu defintions
# menu_file = /menu.yaml

[projects]
projects_file = conf/simple-projects.json

[es_enrichment]
# Refresh identities and projects for all items after enrichment
autorefresh = true

[sortinghat]
load_orgs = true
orgs_file = conf/orgs.json
# TODO: currently private
#identities_file = [conf/identities.json]
#identities_format = grimoirelab
matching = [email-name, github]
autoprofile = [customer, git, github]
sleep_for = 86400
unaffiliated_group = Unknown
affiliate = True

[panels]
kibiter_url = http://kibiter:5601
# Dashboard: default time frame
kibiter_time_from = now-1y
# Dashboard: default index pattern
kibiter_default_index = "git"
github-repos = true
community = false

[phases]
collection = true
identities = true
enrichment = true
panels = true	

##
## The protocol for defining indexes will be
## [description_of_source_with_underscores]-[raw|enriched]
## For example:
## git-raw or git-enriched
## gitub_prs-raw or github_prs-enriched
##
[git]
raw_index = git-raw
enriched_index = git-enriched
studies = [enrich_demography:git,enrich_git_branches:git,enrich_areas_of_code:git, enrich_onion:git,enrich_forecast_activity]

[enrich_demography:git]
#no_incremental = true   # default: false

[enrich_areas_of_code:git]
in_index = git-raw
out_index = git_aoc-enriched

[enrich_git_branches:git]
run_month_days = [4, 23]

[enrich_onion:git]
in_index = git-raw
out_index = git_onion-enriched
contribs_field = hash

[enrich_forecast_activity]
out_index = git_study_forecast

# All things github
[github]
# Loaded from credentials.cfg
# api-token = 
raw_index = github_raw
enriched_index = github_enriched
sleep-for-rate = true
no-archive = true
sleep-time = 300
studies = [enrich_onion:github,enrich_geolocation:user,enrich_geolocation:assignee,enrich_backlog_analysis]

[github:repo]
# Loaded from credentials.cfg
# api-token = 
raw_index = github-repo_raw
enriched_index = github-repo_enriched
category = repository
sleep-for-rate = true
no-archive = true
sleep-time = 300
studies = [enrich_extra_data:github]

[github:pull]
# Loaded from credentials.cfg
# api-token = 
raw_index = github-pull_raw
enriched_index = github-pull_enriched
category = pull_request
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github,enrich_geolocation:user,enrich_geolocation:assignee,enrich_backlog_analysis,enrich_extra_data:github]

[github2:issue]
# Loaded from credentials.cfg
# api-token = 
raw_index = github2-issue_raw
enriched_index = github2-issue_enriched
sleep-for-rate = true
no-archive = true
category = issue

[github2:pull]
# Loaded from credentials.cfg
# api-token = 
raw_index = github2-pull_raw
enriched_index = gihub2-pull_enriched
sleep-for-rate = true
no-archive = true
category = pull_request

[discourse]
# Loaded from credentials.cfg
# api-username = 
# api-token = 
raw_index = discourse-raw
enriched_index = discourse-enriched

[slack]
# Loaded from credentials.cfg
# api-token = 
raw_index = slack-raw
enriched_index = slack-enriched
no-archive = true

# Studies
# Sample working study to apply labels bases on edX's squad/repo ownership model
# TODO: update mordred to allow local json files?
[enrich_extra_data:github]
json_url = https://gist.githubusercontent.com/e0d/88669434afa55953b0d99ed04402ee46/raw/2227e48b947c4e822c4888fda8260846e6034d15/json

[enrich_onion:github]
in_index_iss = github_issues_onion-src
in_index_prs = github_prs_onion-src
out_index_iss = github-issues-onion_enriched
out_index_prs = github-prs-onion_enriched

[enrich_geolocation:user]
location_field = user_location
geolocation_field = user_geolocation

[enrich_geolocation:assignee]
location_field = assignee_location
geolocation_field = assignee_geolocation

[enrich_backlog_analysis]
out_index = github_enrich_backlog
interval_days = 7
reduced_labels = [bug,enhancement]
map_label = [others, bugs, enhancements]
